Fixed error in form related to unpermitted use of value in form element. Now user can write in the input element of the search form. Fixed provisional dropbox link to image so it can be access from the website (just replace www.dropbox.com with dl.dropboxusercontent.com) Fixed the alignment of the ContestImages and Voting components with the rest of the website. Cleared cluttered comments from Index.js Added ImageCard component to ContestImages component.

--- a/image-contest/src/css/index.css
+++ b/image-contest/src/css/index.css
@@ -18,11 +18,13 @@
 @import url("https://qbi.uq.edu.au/sites/all/themes/custom/uq_standard/css/styles.css?ovm7mr");
 /*@import url("https://qbi.uq.edu.au/sites/all/themes/custom/uq_standard/css/print.css?ovm7mr");*/
 
+
+/*****************  Contest Images and Voting Preselection *****************/
 .main-contest {
-  width: 60%;
+  max-width: 1140px;
   height: 1100px;
   min-height: 900px;
-  margin: auto;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -31,9 +33,14 @@
 .contest-images {
   width: 70%;
   height: 100%;
-  background-color: #f6f9fc;
+  /* background-color: #f6f9fc; */
   margin: 0;
   padding: 1.5em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .voting {
@@ -41,5 +48,35 @@
   height: 100%;
   background-color: #dde0e2;
 }
+/***************************************************************************/
+/******************************  Images Cards ******************************/
 
+.image-card {
+  width: 30%;
+  height: 30%;
+  margin: 0.7em;
+  padding: 0.5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #f3f3f3;
+}
 
+.image-card > h1 {
+  font-size: 1.2em;
+  margin: 0.45em 0;
+  line-height: 0.9em;
+}
+
+.image-card > img {
+  width: 80%;
+  margin: 0;
+}
+
+.image-card > p {
+  width: 90%;
+  font-size: 0.7em;
+  line-height: 15px;
+}
+/***************************************************************************/
